# workflow

./: README.md
HKDataAnalyzeDemo/: CMakeLists.txt  README.md  format.bat
HKDataAnalyzeDemo/app/: CMakeLists.txt
HKDataAnalyzeDemo/lib/: CMakeLists.txt
UAVDataAnalyzeBackend/: .clang-format  format.bat
UAVDataAnalyzeBackend/docs/: REST_API.md  commit-task.json  r.json
UAVDataAnalyzeBackend/src/app/: CMakeLists.txt
UAVDataAnalyzeBackend/src/modules/: CMakeLists.txt
UAVDataAnalyzeBackend/tools/cmake/: find_src.cmake  project_helper.cmake
doc/: HKDataAnalyze.xmind
doc/design/: 模块架构设计.drawio
taskFlow/project/: build.sh  if_else.cpp
workFlowDemo/: .gitignore  .gitlab-ci.yml
workFlowDemo/lib/work/: CXWorkImp.cpp  CXWorkImp.h  CXWorkInterface.h
workFlowDemo/lib/workData/: CXWorkDataBase.h
workFlowDemo/lib/workFlow/: CXWorkFlowImp.cpp  CXWorkFlowImp.h  CXWorkFlowInterface.cpp  CXWorkFlowInterface.h
workFlowDemo/lib/workFlowManage/: CXWorkFlowManage.cpp  CXWorkFlowManage.h
